<resources>
    <string name="app_name">Weathalert</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_feedback">Feedback</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="home_humidity">HUMIDITY</string>
    <string name="home_pressure">PRESSURE</string>
    <string name="home_wind">WIND</string>
    <string name="home_clouds">CLOUDS</string>
    <string name="deleteDialogtitle">Are you sure you want to delete ?</string>
    <string name="deleteDialogSupportingText">This city will be deleted immediately. You can\'t undo this action.</string>
    <string name="deleteDialogCancel">Cancel</string>
    <string name="deleteDialogDelete">Delete</string>
    <string name="language_settings_TV">Language</string>
    <string name="english_btn_settings" translatable="false">English</string>
    <string name="arabic_btn_settings" translatable="false">العربية</string>
    <string name="tempLabel_settings_TV">Temperature</string>
    <string name="celsius_btn_settings">Celsius</string>
    <string name="fahrenheit_btn_settings">Fahrenheit</string>
    <string name="windSpeed_settings_TV">Wind Speed</string>
    <string name="temp_settings_TV">Temperature</string>
    <string name="mSec_btn_settings">Meter / Sec</string>
    <string name="miHour_btn_settings">Mile / Hour</string>
    <string name="cancel_btn_settings">Cancel</string>
    <string name="save_btn_settings">Save</string>
    <string name="unitLabel_settings_TV">Units</string>
    <string name="setting_tempDesc">Temp : Kelvin</string>
    <string name="setting_windDesc">Wind : meter/sec</string>
    <string name="metric_btn_settings">Metric</string>
    <string name="setting_metricTempDesc">Temp : Celsius</string>
    <string name="standard_btn_settings">Standard</string>
    <string name="imperial_btn_settings">Imperial</string>
    <string name="setting_imperialTempDesc">Temp : Fahrenheit</string>
    <string name="setting_imprialWindDesc">Wind : miles/hour</string>
    <string name="title_activity_settingss">Settings</string>
    <string name="enable_permission_btn">Enable</string>
    <string name="cityname_tv_today_home">Madrid</string>
    <string name="temp_tv_today_home">77°</string>
    <string name="date_tv_today_home">03-09-2021</string>

    <string name="days_humidity">Humidity</string>
    <string name="days_pressure">Pressure</string>
    <string name="days_clouds">Clouds</string>
    <string name="days_wind">Wind</string>
    <string name="days_sat">Saturday</string>
    <string name="days_sun">Sunday</string>
    <string name="days_mon">Monday</string>
    <string name="days_tue">Tuesday</string>
    <string name="days_wed">Wednesday</string>
    <string name="days_thu">Thursday</string>
    <string name="days_fri">Friday</string>
    <string name="home_data" translatable="false">---</string>
    <string name="home_main_humidityTV">Humidity</string>
    <string name="home_main_windTV">Wind</string>
    <string name="home_main_cloudsTV">Clouds</string>
    <string name="home_main_pressureTV">Pressure</string>
    <string name="home_label_hourlyTV">Hourly</string>
    <string name="home_label_dailyTV">Daily</string>
    <string name="met_per_sec">m/s</string>
    <string name="hPa">hPa</string>
    <string name="home_hourly_am">AM</string>
    <string name="home_hourly_pm">PM</string>
    <string name="add_alarm_valueTV">Enter Value</string>
    <string name="add_alarm_typeTV">Select Type</string>
    <string name="add_alarm_daysTV">Select Days</string>
    <string name="add_alarm_compareTV">Select Comparison</string>
    <string name="add_alarm_pickTimeTV">Pick Time</string>
    <string name="add_alarm_timePickerTV">click to pick</string>
    <string name="higher_than_alarmChBx">Higher Than</string>
    <string name="less_than_alarmChBx">Less Than</string>
    <string name="add_alrm_temp">Temperature</string>
    <string name="add_alrm_Rain">Rain</string>
    <string name="add_alrm_wind">Wind</string>
    <string name="add_alrm_Fog_Mist_Haze">Fog-Mist-Haze</string>
    <string name="add_alrm_Snow">Snow</string>
    <string name="add_alrm_Clouds">Clouds</string>
    <string name="add_alrm_Thunderstorm">Thunderstorm</string>
    <string name="add_alarm_toast_type">Please select type</string>
    <string name="add_alarm_toast_days">Please select day(s)</string>
    <string name="add_alarm_toast_value">Please, enter alarm value</string>
    <string name="add_alarm_toast_isGreat">Please, select comparison type</string>
    <string name="add_alarm_toast_pickTime">Please, pick time</string>
    <string name="add_alarm_toast_validTime">Please, pick a valid time</string>
    <string name="alarm_beCare">Be careful</string>
    <string name="alarm_msg_willBe">will be</string>
    <string name="alarm_msg_thereWillBe">There will be</string>
    <string name="add_alrm_Haze">Haze</string>
    <string name="add_alrm_Mist">Mist</string>
    <string name="add_alrm_Fog">Fog</string>
    <string name="alarm_msg_on">on</string>
    <string name="favCities_label">Favorite</string>
    <string name="addalarm_label">Add Alarm</string>
    <string name="percent_sign">%</string>

</resources>