<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_main_background"
    tools:context=".settings.view.SettingsActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:background="@drawable/circular_layout">

        <TextView
            android:id="@+id/languageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_settings_TV"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_sperator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/arabicTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/arabic_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.3"
            android:background="@drawable/btn_unpressed"/>

        <TextView
            android:id="@+id/EnglishTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/english_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintWidth_percent="0.4"
            android:background="@drawable/btn_pressed"
            app:layout_constraintHeight_percent="0.3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temp_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        android:background="@drawable/circular_layout">

        <TextView
            android:id="@+id/tempTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unitLabel_settings_TV"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_sperator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <TextView
            android:id="@+id/standardBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/standard_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.3"
            android:background="@drawable/btn_pressed"
            app:layout_constraintHeight_percent="0.25"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.4">


            <TextView
                android:id="@+id/tempDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting_tempDesc" />

            <TextView
                android:id="@+id/windDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/setting_windDesc" />
        </LinearLayout>

        <TextView
            android:id="@+id/metricBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/metric_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.575"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.25"
            android:background="@drawable/btn_unpressed"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.575"
            app:layout_constraintWidth_percent="0.4">


            <TextView
                android:id="@+id/metricTempDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting_metricTempDesc" />

            <TextView
                android:id="@+id/metricWindDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/setting_windDesc" />
        </LinearLayout>

        <TextView
            android:id="@+id/imperialBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/imperial_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.25"
            android:background="@drawable/btn_unpressed"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintWidth_percent="0.4">


            <TextView
                android:id="@+id/imperialTempDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting_imperialTempDesc" />

            <TextView
                android:id="@+id/imperialWindDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/setting_imprialWindDesc" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
<!--
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/windSpeed_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:background="@drawable/circular_layout">

        <TextView
            android:id="@+id/windSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windSpeed_settings_TV"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_sperator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/mSecTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/mSec_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.3"
            android:background="@drawable/btn_unpressed"/>

        <TextView
            android:id="@+id/miHour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/miHour_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintWidth_percent="0.4"
            android:background="@drawable/btn_pressed"
            app:layout_constraintHeight_percent="0.3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/saveCancel_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96">

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.75"
            android:textColor="@color/red"
            android:background="@drawable/btn_unpressed"/>

        <TextView
            android:id="@+id/saveTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/save_btn_settings"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.75"
            android:textColor="@color/purple_700"
            android:background="@drawable/btn_unpressed"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>